cmake_minimum_required(VERSION 3.30)
project(Mokrukha)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_EXTENSIONS ON)

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif()

if(WIN32)
    set(PLATFORM_NAME "Win")
elseif(UNIX AND NOT APPLE)
    set(PLATFORM_NAME "Linux")
elseif(APPLE)
    set(PLATFORM_NAME "Mac")
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
    set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -DBIT_DEBUG -Wall -Wextra -fsanitize=address -fsanitize=undefined")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -Wall")
elseif(MSVC)
    set(CMAKE_CXX_FLAGS_DEBUG "/Zi /Od /DBIT_DEBUG /W4")
    set(CMAKE_CXX_FLAGS_RELEASE "/O2 /DNDEBUG /W3")
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>/${PLATFORM_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>/${PLATFORM_NAME})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin-int/$<CONFIG>/${PLATFORM_NAME})

add_subdirectory(Mokrukha)
