cmake_minimum_required(VERSION 3.30)
project(Mokrukha)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

if(WIN32)
    set(PLATFORM_NAME "Win")
elseif(UNIX AND NOT APPLE)
    set(PLATFORM_NAME "Linux")
elseif(APPLE)
    set(PLATFORM_NAME "Mac")
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>/${PLATFORM_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/$<CONFIG>/${PLATFORM_NAME})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin-int/$<CONFIG>/${PLATFORM_NAME})

add_subdirectory(Mokrukha)
